тест: расчет пени

--- a/script/settingsRKS2.json
+++ b/script/settingsRKS2.json
@@ -8,6 +8,7 @@
 		"энргНеПрименятьЗависимостьЕслиБольшеОднойТочки": true,
 		"энргИспользоватьШкалыПриборовУчета": false,
 		"энргДатаНачалаВеденияУчета": "2019-07-01T00:00:00",
+		"энргНачислятьПеню": true,
 		"энргПоставщикПоУмолчанию": {
 			"ГруппаОбъектов": "СправочникМенеджер",
 			"ИмяОбъекта": "энргКонтрагенты",
