--- a/script/settingsRKS2.json
+++ b/script/settingsRKS2.json
@@ -16,7 +16,7 @@
 		}
 	},
 	"ОбщиеНастройки": {
-		"ПутьКМакету": "C:\\Работа\\Гит\\РКС\\настройки.json",
+		"ПутьКМакету": "C:\\Users\\Чернова\\Desktop\\git\\РКС\\настройки.json",
 		"ПутьКЗагрузчику": "C:\\Program Files (x86)\\OneScript\\lib\\add\\plugins\\СериализаторMXL.epf"
 	},
 	"Пользователи": [
